--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "devDependencies": {
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-router": "~5.0.0",
-    "@vue/cli-service": "^3.3.1",
+    "@vue/cli-service": "~5.0.8",
     "eslint-plugin-vue": "^9.19.2"
   }
 }
